--- a/myReactLx/package.json
+++ b/myReactLx/package.json
@@ -129,6 +129,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "hyflow": "^1.2.7",
     "lint-staged": "^3.3.1",
     "mockjs": "^1.0.1-beta3",
     "optimize-css-assets-webpack-plugin": "3.2.0",
